WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71473
[Qt] Assert in computeViewportAttributes under WebPage::setViewportSize.
https://bugs.webkit.org/show_bug.cgi?id=71473
Summary
[Qt] Assert in computeViewportAttributes under WebPage::setViewportSize.
Jocelyn Turcotte
Reported
2011-11-03 07:33:51 PDT
ASSERTION FAILED: availableWidth > 0 && availableHeight > 0 #0 0xb6307478 in WebCore::computeViewportAttributes (args=..., desktopWidth=980, deviceWidth=480, deviceHeight=854, deviceDPI=240, visibleViewport=...) at ../../../Source/WebCore/dom/ViewportArguments.cpp:51 #1 0xb5fd2c92 in WebKit::WebPage::setViewportSize (this=0x810e468, size=...) at ../../../Source/WebKit2/WebProcess/WebPage/WebPage.cpp:752 #2 0xb600753e in CoreIPC::callMemberFunction<WebKit::WebPage, void (WebKit::WebPage::*)(WebCore::IntSize const&), WebCore::IntSize> (args=..., object=0x810e468, function= (void (WebKit::WebPage::*)(WebKit::WebPage *, const WebCore::IntSize &)) 0xb5fd2b6a <WebKit::WebPage::setViewportSize(WebCore::IntSize const&)>) at ../../../Source/WebKit2/Platform/CoreIPC/HandleMessage.h:19 #3 0xb600563e in CoreIPC::handleMessage<Messages::WebPage::SetViewportSize, WebKit::WebPage, void (WebKit::WebPage::*)(WebCore::IntSize const&)> (argumentDecoder=0x80e1128, object=0x810e468, function=(void (WebKit::WebPage::*)(WebKit::WebPage *, const WebCore::IntSize &)) 0xb5fd2b6a <WebKit::WebPage::setViewportSize(WebCore::IntSize const&)>) at ../../../Source/WebKit2/Platform/CoreIPC/HandleMessage.h:277 #4 0xb6003534 in WebKit::WebPage::didReceiveWebPageMessage (this=0x810e468, messageID=..., arguments=0x80e1128) at generated/WebPageMessageReceiver.cpp:229 ...
Attachments
Patch
(1.80 KB, patch)
2011-11-03 07:37 PDT
,
Jocelyn Turcotte
hausmann
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jocelyn Turcotte
Comment 1
2011-11-03 07:37:29 PDT
Created
attachment 113488
[details]
Patch
Simon Hausmann
Comment 2
2011-11-03 07:46:04 PDT
Comment on
attachment 113488
[details]
Patch rs=me
Jocelyn Turcotte
Comment 3
2011-11-03 07:50:12 PDT
Committed
r99192
: <
http://trac.webkit.org/changeset/99192
>
alan
Comment 4
2011-11-03 07:53:03 PDT
***
Bug 71472
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug