[Qt] Fix an assertion under WebPage::setViewportSize. https://bugs.webkit.org/show_bug.cgi?id=71473

Reviewed by Simon Hausmann.

The web view can have an empty size and it causes the assert in computeViewportAttributes.
Don't notify the web page of such a size change in this case.

* UIProcess/API/qt/qtouchwebview.cpp:
(QTouchWebViewPrivate::updateViewportSize):

Canonical link: https://commits.webkit.org/87783@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99192 268f45cc-cd09-0410-ab3c-d52691b4dbfc